# py_learning

./: .gitignore  Pipfile  README.md  py_mod_lern.ipynb  py_oop.ipynb  sample.csv  test.db
AsyncProgramming/: async.py  test.py
DB/mongo/: db.py  logger.py  mongoTest.py
Data/EDA/: EDA_sec01.ipynb  eda_sec02_vis.ipynb
Data/pandas/: lec_basic.ipynb
Recursions/: factorial.py  permutations.py  rec_intro.ipynb
Test/: oop1.py  sa.py  testfn.py
Testing/: nearest_square.py
airflow/: sample.py
beyond_basics/03_functions/: functions.py  funs.ipynb  resolver.py  sample.py
beyond_basics/4_class_and_method_attributes/: classes.py  poly.py  properties_and_class_methods.ipynb
beyond_basics/DataClasses/: dtclss.py
beyond_basics/Decorators/: decorators.ipynb
beyond_basics/Lists/: intro_lists.ipynb  list_comp.py
beyond_basics/packaging/: Untitled.ipynb
blackJackgame/: main_test.py
dataStruct/: bi_tree.py  cir_linked_list.py  cir_linked_list_test.py  doubleLinked.py  linked.py  linked_list_v2.py  llist_merge.py  queue.py  stacks.py
dynamic_programming/: prob1.py
extras/: py_mod_lern.ipynb  py_oop.ipynb  python_numpy.ipynb  python_seaborn.ipynb
fastAPI/App1/api/: pyproject.toml
fastAPI/App1/api/src/: main.py
modules/: Parsel2.ipynb  Requests.ipynb  parsel.ipynb
modules/cli_Apps/: cli_utlis.py  lanunch_app.py  pyproject.toml  sample.py
prb_slv/: fibi.py  prob1.py  prob2.py  prob3.py  prob4.py  prob5.py
pyENG/: code_1.py  cprofile.py  notes.md
reader/: __init__.py  reader.py
sqlLite/: sample.py  sampleQuries.ipynb  sqlTest.py
(+76 files in other folders)
