[tool.poetry]
name = "launch-protocol"
version = "0.1.0"
description = "Sample CLI app"
authors = ["Akhil Vinayak P <nirvanaosborn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
tqdm = "^4.66.2"
colorama = "^0.4.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
